# edge-notes

./: .gitignore  README.md  index.html  package-lock.json  package.json  思路.txt
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: assets.rs  mod.rs  notes.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/utils/: image.rs  mod.rs  path.rs
src/components/editor/: DropImageOverlay.tsx  EditorToolbar.tsx  MarkdownEditor.tsx
src/components/notes/: NoteList.tsx  NoteListItem.tsx  SearchBox.tsx
src/components/shell/: DrawerPanel.tsx  NotchHandle.tsx  WindowFrame.tsx
src/hooks/: useDebouncedSave.ts  useDrawer.ts
src/services/: assetService.ts  markdownService.ts  noteService.ts  tauri.ts  windowService.ts
src/store/: noteStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: asset.ts  editor.ts  note.ts
