[package]
name = "edge-notes"
version = "0.1.1"
description = "Windows top drawer Markdown notes"
authors = ["EdgeNotes"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
